--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-validator": "^7.0.1"
   }
 }
