Add authentication middleware and logging functionality

--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": ["swagger_output.json"]
+  },
   "devDependencies": {
     "prisma": "^5.11.0"
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0"
   }
 }
