Update .env and swagger.js files

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 JWT_SECRET=secret
 DATABASE_URL="postgres://ihhn_home_health_care_user:BjE8o9TG3Gyvx7dRHN7wcMcwPuT8BM0T@dpg-cnrlhri1hbls73e0atc0-a.singapore-postgres.render.com/ihhn_home_health_care"
+HOST=ihhn-home-health-care-be.onrender.com
